--- a/reactjs/sample-app-nav/src/component/TopBar.css
+++ b/reactjs/sample-app-nav/src/component/TopBar.css
@@ -25,3 +25,11 @@
   background-color: #0d75a5;
   color: white;
 }
+
+/* #topnav a:hover {
+  border-bottom: 2px solid gray;
+} */
+
+/* #topnav a.active {
+  border-bottom: 2px solid whitesmoke;
+} */
