--- a/reactjs/sample-app-nav/src/App.css
+++ b/reactjs/sample-app-nav/src/App.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap");
+
+html {
+  font-family: Poppins;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  /* width: 100vw;
+  height: 100vh; */
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
 }
@@ -22,6 +34,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-top: 80px;
 }
 
 .App-link {
@@ -37,6 +50,31 @@
   }
 }
 
-ul {
-  list-style-type: none;
+#title {
+  color: gray;
+}
+
+#meme-page {
+  font-family: "Poppins";
+}
+
+.card {
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+}
+
+figure:hover {
+  transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  -ms-transform: scale(1.05);
 }
