--- a/reactjs/sample-app-nav/src/component/TopBar.css
+++ b/reactjs/sample-app-nav/src/component/TopBar.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap");
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #333;
@@ -26,10 +28,10 @@
   color: white;
 }
 
-/* #topnav a:hover {
-  border-bottom: 2px solid gray;
-} */
+#brandLogo {
+  margin: 0 5% 0 0;
+}
 
-/* #topnav a.active {
-  border-bottom: 2px solid whitesmoke;
-} */
+nav {
+  font-family: "Poppins";
+}
